--- a/stylesheets/scss/partials/_images.scss
+++ b/stylesheets/scss/partials/_images.scss
@@ -70,3 +70,9 @@
 
     }
 }
+
+.quote-pic {
+	 height: 100px; 
+	 margin: 10px; 
+	 border-radius: 50%;
+}
